# cockroach-reminder-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
plans/: memory-leak-analysis.md
src/: cockroach.rs  config.rs  constants.rs  main.rs  overlay.rs  overlay_manager.rs  platform.rs  settings_ui.rs  timer.rs  tray.rs
