[package]
name = "cockroach-reminder"
version = "1.0.0"
description = "A break reminder app with cockroach animations that crawl across your screen"
authors = ["XUANLI"]
edition = "2021"
license = "MIT"

[[bin]]
name = "cockroach-reminder"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["advanced", "canvas", "crisp", "image-without-codecs", "tokio", "wayland", "wgpu", "x11"] }
tray-icon = "0.19"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13", features = ["xinerama"] }

[profile.release]
opt-level = 3
lto = true
